track features and examples minor fixes

--- a/src/V2/Makefile
+++ b/src/V2/Makefile
@@ -1,102 +1,96 @@
 ######################################################################
-# CUDA-ready Makefile for KLT (with computeGradientSum.cu)
+# CUDA-ready Makefile for KLT (CPU/GPU variants)
 ######################################################################
 
-# CUDA compiler
+# Compilers
+CC   = gcc
 NVCC = nvcc
 
-# Compiler flags
-NVCCFLAGS = -O3 -Xcompiler -fPIC -DNDEBUG -pg
+# Flags
+CFLAGS    = -O3 -DNDEBUG -pg -fPIC
+NVCCFLAGS = -O3 -std=c++14 -arch=sm_75 -DNDEBUG -pg -Xcompiler -fPIC
 
 # Libraries
-LIBS = -lm -lcudart
+LIBS      = -lm
+NVLIBS    = -lm -lcudart
 
-# Source files for the library
-SRC_LIB = convolve.cu computeGradientSum.cu selectGoodFeatures_GPU.cu error.c pnmio.c pyramid.c \
-           storeFeatures.c trackFeatures.c klt.c \
-          klt_util.c writeFeatures.c
+# Sources
+SRC_LIB_CPU = convolve.c selectGoodFeatures.c error.c pnmio.c pyramid.c \
+              storeFeatures.c trackFeatures.c klt.c klt_util.c writeFeatures.c
 
-# Source files for examples
-SRC_EXAMPLES = example1.c example2.c example3.c example4.c example5.c
+SRC_LIB_GPU = convolve.cu computeGradientSum.cu selectGoodFeatures_GPU.cu error.c pnmio.c pyramid.c \
+              storeFeatures.c trackFeatures.c klt.c klt_util.c writeFeatures.c
+
+SRC_EXAMPLES = example1.c example2.c example3.c
 
 # Object files
-OBJ_LIB = $(SRC_LIB:.c=.o)
-OBJ_LIB := $(OBJ_LIB:.cu=.o)
-
+OBJ_LIB_CPU = $(SRC_LIB_CPU:.c=.o)
+OBJ_LIB_GPU = $(SRC_LIB_GPU:.c=.o)
 OBJ_EXAMPLES = $(SRC_EXAMPLES:.c=.o)
 
-# Library name
-LIB = libklt.a
+# Library names
+LIB_CPU = libklt_CPU.a
+LIB_GPU = libklt_GPU.a
 
 ######################################################################
 # Default target
 ######################################################################
-
-all: $(SRC_EXAMPLES:.c=)
+all: cpu gpu
 
 ######################################################################
-# Compilation rules
+# CPU Build
 ######################################################################
+cpu: $(SRC_EXAMPLES:.c=_CPU)
 
-# Compile CUDA files
+# Compile CPU objects
+%.o: %.c
+	$(CC) -c $(CFLAGS) $< -o $@
+
+# Build CPU library
+$(LIB_CPU): $(OBJ_LIB_CPU)
+	ar ruv $(LIB_CPU) $(OBJ_LIB_CPU)
+	@echo "CPU library $(LIB_CPU) built."
+
+# Build CPU examples
+%_CPU: %.o $(LIB_CPU)
+	$(CC) $(CFLAGS) -o $@ $< $(LIB_CPU) $(LIBS)
+	@echo "Built CPU example: $@"
+
+######################################################################
+# GPU Build
+######################################################################
+gpu: $(SRC_EXAMPLES:.c=_GPU)
+
+# Compile GPU objects
 %.o: %.cu
 	$(NVCC) -c $(NVCCFLAGS) $< -o $@
 
-# Compile C files
-%.o: %.c
-	$(NVCC) -c $(NVCCFLAGS) $< -o $@
+# Build GPU library
+$(LIB_GPU): $(OBJ_LIB_GPU)
+	ar ruv $(LIB_GPU) $(OBJ_LIB_GPU)
+	@echo "GPU library $(LIB_GPU) built."
+
+# Build GPU examples
+%_GPU: %.o $(LIB_GPU)
+	$(NVCC) $(NVCCFLAGS) -o $@ $< $(LIB_GPU) $(NVLIBS)
+	@echo "Built GPU example: $@"
 
 ######################################################################
-# Build static library
+# Profiling & Call Graphs (CPU only)
 ######################################################################
-
-$(LIB): $(OBJ_LIB)
-	ar ruv $(LIB) $(OBJ_LIB)
-	@echo "Static library $(LIB) built."
-
-######################################################################
-# Build examples
-######################################################################
-
-$(SRC_EXAMPLES:.c=): %: %.o $(LIB)
-	$(NVCC) $(NVCCFLAGS) -o $@ $< $(LIB) $(LIBS)
-	@echo "Built example: $@"
-
-######################################################################
-# Dependency (optional)
-######################################################################
-
-depend:
-	makedepend $(SRC_LIB) $(SRC_EXAMPLES)
-
-######################################################################
-# Clean up
-######################################################################
-
-clean:
-	rm -f $(OBJ_LIB) $(OBJ_EXAMPLES) $(SRC_EXAMPLES:.c=) $(LIB)
-	@echo "Cleaned all build files."
-
-######################################################################
-# Profiling (optional)
-######################################################################
-
 PROFILES_DIR = profiles
 
-profile: $(SRC_EXAMPLES:.c=)
+profile: cpu
 	mkdir -p $(PROFILES_DIR)
-	@for exe in $(SRC_EXAMPLES:.c=); do \
+	@for exe in $(SRC_EXAMPLES:.c=_CPU); do \
 	    echo "=============================================="; \
-	    echo "Running $$exe for profiling..."; \
+	    echo "Profiling $$exe..."; \
 	    ./$$exe; \
-	    echo "Generating gprof report for $$exe..."; \
 	    gprof $$exe gmon.out > $(PROFILES_DIR)/gprof_$$exe.txt; \
 	    echo "Saved: $(PROFILES_DIR)/gprof_$$exe.txt"; \
 	done
-	@echo "All profiling reports saved in $(PROFILES_DIR)/"
 
-all-graph:
-	mkdir -p $(PROFILES_DIR)
+all-graph: profile
 	@for txt in $(PROFILES_DIR)/gprof_*.txt; do \
 	    exe=$$(basename $$txt .txt | sed 's/^gprof_//'); \
 	    echo "Generating call graph for $$exe..."; \
@@ -104,6 +98,13 @@ all-graph:
 	    echo "Saved: $(PROFILES_DIR)/profile_$$exe.png"; \
 	done
 
+######################################################################
+# Clean
+######################################################################
+clean:
+	rm -f *.o *.a $(EXAMPLES:.c=) *.tar *.tar.gz libklt.a \
+	      feat*.ppm features.ft features.txt
+	@echo "Cleaned all build files."
 
 clean-profile:
 	rm -rf $(PROFILES_DIR) gmon.out
