Seperate files for GPU and CPU compiling

--- a/src/V2/Makefile
+++ b/src/V2/Makefile
@@ -1,39 +1,48 @@
 ######################################################################
-# CUDA-ready Makefile for KLT (with CPU & GPU builds, profiling, call graphs)
+# CUDA-ready Makefile for KLT (with separate CPU & GPU builds)
 ######################################################################
 
 # Compilers
 CC   = gcc
 NVCC = nvcc
 
+######################################################################
 # Flags
-CFLAGS   = -O3 -pg -DNDEBUG -fPIC
-NVCCFLAGS = -O3 -std=c++14 -arch=sm_75 -DNDEBUG -pg -Xcompiler -fPIC -DUSE_GPU
+######################################################################
+CFLAGS     = -O3 -pg -DNDEBUG -fPIC
+NVCCFLAGS  = -O3 -std=c++14 -arch=sm_75 -DNDEBUG -pg -Xcompiler -fPIC -DUSE_GPU
 
 # Libraries
 LIBS_CPU = -lm
 LIBS_GPU = -lm -lcudart
 
 ######################################################################
-# Source files
+# Source Files
 ######################################################################
 
-# GPU-specific CUDA code
-SRC_GPU = convolve.cu computeGradientSum.cu selectGoodFeatures_GPU.cu
+# GPU-specific CUDA sources (compiled only for GPU build)
+SRC_GPU = convolve.cu selectGoodFeatures_GPU.cu trackFeatures.cu
 
-# Common CPU sources (used for both CPU & GPU)
-SRC_CPU = error.c pnmio.c pyramid.c storeFeatures.c trackFeatures.c \
-           klt.c klt_util.c writeFeatures.c selectGoodFeatures.c convolve.c
+# Common CPU sources (used for both builds)
+SRC_CPU_COMMON = error.c pnmio.c pyramid.c storeFeatures.c \
+                 klt.c klt_util.c writeFeatures.c
+
+# CPU-only sources (compiled only for CPU build)
+SRC_CPU_ONLY = selectGoodFeatures.c convolve.c trackFeatures.c
+
+# Combine to form full CPU build list
+SRC_CPU = $(SRC_CPU_COMMON) $(SRC_CPU_ONLY)
 
 # Example programs
 SRC_EXAMPLES = example1.c example2.c example3.c example4.c example5.c
 
-# Objects
-OBJ_GPU = $(SRC_GPU:.cu=.o)
+######################################################################
+# Object Files
+######################################################################
 OBJ_CPU = $(SRC_CPU:.c=.o)
+OBJ_GPU = $(SRC_GPU:.cu=.o) $(SRC_CPU_COMMON:.c=.o)
 OBJ_EXAMPLES = $(SRC_EXAMPLES:.c=.o)
 
-# Libraries
 LIB_CPU = libklt_CPU.a
 LIB_GPU = libklt_GPU.a
 
@@ -65,7 +74,7 @@ $(SRC_EXAMPLES:.c=_CPU): %_CPU: %.o $(LIB_CPU)
 gpu: $(LIB_GPU) $(SRC_EXAMPLES:.c=_GPU)
 	@echo "✅ GPU build complete."
 
-$(LIB_GPU): $(OBJ_CPU) $(OBJ_GPU)
+$(LIB_GPU): $(OBJ_GPU)
 	ar rcs $@ $^
 	@echo "Built GPU library: $@"
 
@@ -77,11 +86,11 @@ $(SRC_EXAMPLES:.c=_GPU): %_GPU: %.o $(LIB_GPU)
 # Compilation Rules
 ######################################################################
 
-# Compile C files with gcc (CPU)
+# Compile CPU .c files
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-# Compile CUDA files with nvcc (GPU)
+# Compile CUDA .cu files
 %.o: %.cu
 	$(NVCC) $(NVCCFLAGS) -c $< -o $@
 
@@ -121,11 +130,11 @@ clean-profile:
 ######################################################################
 
 clean:
-	rm -f .o *.a libklt.a \
-	      example*_CPU example*_GPU example1 example2 example3 example4 example5 \
+	rm -f *.o *.a example*_CPU example*_GPU \
+	      example1 example2 example3 example4 example5 \
 	      feat*.ppm features.ft features.txt *.tar *.tar.gz
 	@echo "Cleaned all build files."
 
 ######################################################################
 # End of Makefile
-#####################################################################
+######################################################################
